# Open-agent

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  fly.toml  railway.json  render.yaml
.agents/skills/testing-backend/: SKILL.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: agent.py  auth.py  browser.py  files.py  tasks.py
backend/app/core/: security.py  workspace.py
backend/app/db/: database.py
backend/app/models/: __init__.py  session.py  task.py  user.py
backend/app/services/: ai_agent.py  auth_service.py  browser_engine.py  file_manager.py  task_executor.py
backend/tests/: test_api.py
eshort-admin/: settings.gradle.kts
eshort-admin-panel/: build.gradle.kts  settings.gradle.kts
eshort-admin-panel/app/: build.gradle.kts  google-services.json  proguard-rules.pro
eshort-admin-panel/app/src/main/: AndroidManifest.xml
eshort-admin/app/: build.gradle.kts  google-services.json  proguard-rules.pro
eshort-admin/app/src/main/: AndroidManifest.xml
eshort-app/: gradle.properties  settings.gradle.kts
eshort-app/app/: build.gradle.kts  google-services.json  proguard-rules.pro
eshort-app/firebase/: database.rules.json  firestore.rules  storage.rules
eshort-user/: README.md  settings.gradle.kts
eshort-user/app/: build.gradle.kts  google-services.json  proguard-rules.pro
eshort-user/firebase/: database.rules.json  firestore.rules
(+113 files in other folders)
